// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RuntimeToolsDevUIEnvelopeView tests Snapshot::Process and Tracing enabled 1`] = `<div />`;

exports[`RuntimeToolsDevUIEnvelopeView tests Snapshot::Process and Tracing enabled 2`] = `
<div>
  <div
    class="pf-c-page pf-m-resize-observer pf-m-breakpoint-default pf-m-height-breakpoint-sm kogito-consoles-common--PageLayout"
    data-ouia-component-type="page"
    data-ouia-safe="true"
  >
    <div
      aria-hidden="false"
      class="pf-c-page__sidebar pf-m-expanded"
      data-ouia-navigation="true"
      data-testid="page-sidebar"
      id="page-sidebar"
    >
      <div
        class="pf-c-page__sidebar-body"
      >
        <nav
          aria-label="Nav"
          class="pf-c-nav"
          data-ouia-component-id="OUIA-Generated-Nav-1"
          data-ouia-component-type="PF4/Nav"
          data-ouia-safe="true"
        >
          <ul
            class="pf-c-nav__list"
          >
            <li
              class="pf-c-nav__item"
              data-ouia-component-id="OUIA-Generated-NavItem-1"
              data-ouia-component-type="PF4/NavItem"
              data-ouia-safe="true"
            >
              <a
                class="pf-c-nav__link"
                data-ouia-navigation-name="processes-nav"
                href="/Processes"
              >
                Workflows
              </a>
            </li>
            <li
              class="pf-c-nav__item"
              data-ouia-component-id="OUIA-Generated-NavItem-2"
              data-ouia-component-type="PF4/NavItem"
              data-ouia-safe="true"
            >
              <a
                class="pf-c-nav__link"
                data-ouia-navigation-name="monitoring-nav"
                href="/Monitoring"
              >
                Monitoring
              </a>
            </li>
            <li
              class="pf-c-nav__item"
              data-ouia-component-id="OUIA-Generated-NavItem-3"
              data-ouia-component-type="PF4/NavItem"
              data-ouia-safe="true"
            >
              <a
                class="pf-c-nav__link"
                data-ouia-navigation-name="customDashboard-nav"
                href="/CustomDashboard"
              >
                Dashboards
              </a>
            </li>
            <li
              class="pf-c-nav__item"
              data-ouia-component-id="OUIA-Generated-NavItem-4"
              data-ouia-component-type="PF4/NavItem"
              data-ouia-safe="true"
            >
              <a
                class="pf-c-nav__link"
                data-ouia-navigation-name="audit-nav"
                href="/Audit"
              >
                Audit investigation
              </a>
            </li>
          </ul>
        </nav>
      </div>
    </div>
    <main
      class="pf-c-page__main"
      data-ouia-main="true"
      id="main-content-page-layout-default-nav"
      tabindex="-1"
    >
      <section
        class="pf-c-page__main-section pf-m-light"
        data-ouia-component-type="page-not-found"
        data-ouia-safe="true"
      >
        <div
          class="pf-l-bullseye"
        >
          <div
            class="pf-c-empty-state"
          >
            <div
              class="pf-c-empty-state__content"
            >
              <svg
                aria-hidden="true"
                class="pf-c-empty-state__icon"
                fill="var(--pf-global--danger-color--100)"
                height="1em"
                role="img"
                style="vertical-align: -0.125em;"
                viewBox="0 0 512 512"
                width="1em"
              >
                <path
                  d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
                />
              </svg>
              <h1
                class="pf-c-title pf-m-4xl"
                data-ouia-component-id="OUIA-Generated-Title-1"
                data-ouia-component-type="PF4/Title"
                data-ouia-safe="true"
              >
                404 Error: page not found
              </h1>
              <div
                class="pf-c-empty-state__body"
              >
                This page could not be found.
              </div>
              <button
                aria-disabled="false"
                class="pf-c-button pf-m-primary"
                data-ouia-component-id="OUIA-Generated-Button-primary-1"
                data-ouia-component-type="PF4/Button"
                data-ouia-safe="true"
                data-testid="redirect-button"
                type="button"
              >
                Go to jobs management
              </button>
            </div>
          </div>
        </div>
      </section>
    </main>
  </div>
</div>
`;

exports[`RuntimeToolsDevUIEnvelopeView tests Snapshot::Process disabled, Trusty disabled 1`] = `<div />`;

exports[`RuntimeToolsDevUIEnvelopeView tests Snapshot::Process disabled, Trusty enabled 1`] = `
<div>
  <div
    class="pf-c-page pf-m-resize-observer pf-m-breakpoint-default pf-m-height-breakpoint-sm kogito-consoles-common--PageLayout"
    data-ouia-component-type="page"
    data-ouia-safe="true"
  >
    <div
      aria-hidden="false"
      class="pf-c-page__sidebar pf-m-expanded"
      data-ouia-navigation="true"
      data-testid="page-sidebar"
      id="page-sidebar"
    >
      <div
        class="pf-c-page__sidebar-body"
      >
        <nav
          aria-label="Nav"
          class="pf-c-nav"
          data-ouia-component-id="OUIA-Generated-Nav-3"
          data-ouia-component-type="PF4/Nav"
          data-ouia-safe="true"
        >
          <ul
            class="pf-c-nav__list"
          >
            <li
              class="pf-c-nav__item"
              data-ouia-component-id="OUIA-Generated-NavItem-8"
              data-ouia-component-type="PF4/NavItem"
              data-ouia-safe="true"
            >
              <a
                class="pf-c-nav__link"
                data-ouia-navigation-name="audit-nav"
                href="/Audit"
              >
                Audit investigation
              </a>
            </li>
          </ul>
        </nav>
      </div>
    </div>
    <main
      class="pf-c-page__main"
      data-ouia-main="true"
      id="main-content-page-layout-default-nav"
      tabindex="-1"
    >
      <section
        class="pf-c-page__main-section pf-m-light"
        data-ouia-component-type="page-not-found"
        data-ouia-safe="true"
      >
        <div
          class="pf-l-bullseye"
        >
          <div
            class="pf-c-empty-state"
          >
            <div
              class="pf-c-empty-state__content"
            >
              <svg
                aria-hidden="true"
                class="pf-c-empty-state__icon"
                fill="var(--pf-global--danger-color--100)"
                height="1em"
                role="img"
                style="vertical-align: -0.125em;"
                viewBox="0 0 512 512"
                width="1em"
              >
                <path
                  d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
                />
              </svg>
              <h1
                class="pf-c-title pf-m-4xl"
                data-ouia-component-id="OUIA-Generated-Title-3"
                data-ouia-component-type="PF4/Title"
                data-ouia-safe="true"
              >
                404 Error: page not found
              </h1>
              <div
                class="pf-c-empty-state__body"
              >
                This page could not be found.
              </div>
              <button
                aria-disabled="false"
                class="pf-c-button pf-m-primary"
                data-ouia-component-id="OUIA-Generated-Button-primary-3"
                data-ouia-component-type="PF4/Button"
                data-ouia-safe="true"
                data-testid="redirect-button"
                type="button"
              >
                Go to audit
              </button>
            </div>
          </div>
        </div>
      </section>
    </main>
  </div>
</div>
`;

exports[`RuntimeToolsDevUIEnvelopeView tests Snapshot::Process enabled, Trusty disabled 1`] = `
<div>
  <div
    class="pf-c-page pf-m-resize-observer pf-m-breakpoint-default pf-m-height-breakpoint-sm kogito-consoles-common--PageLayout"
    data-ouia-component-type="page"
    data-ouia-safe="true"
  >
    <div
      aria-hidden="false"
      class="pf-c-page__sidebar pf-m-expanded"
      data-ouia-navigation="true"
      data-testid="page-sidebar"
      id="page-sidebar"
    >
      <div
        class="pf-c-page__sidebar-body"
      >
        <nav
          aria-label="Nav"
          class="pf-c-nav"
          data-ouia-component-id="OUIA-Generated-Nav-2"
          data-ouia-component-type="PF4/Nav"
          data-ouia-safe="true"
        >
          <ul
            class="pf-c-nav__list"
          >
            <li
              class="pf-c-nav__item"
              data-ouia-component-id="OUIA-Generated-NavItem-5"
              data-ouia-component-type="PF4/NavItem"
              data-ouia-safe="true"
            >
              <a
                class="pf-c-nav__link"
                data-ouia-navigation-name="processes-nav"
                href="/Processes"
              >
                Workflows
              </a>
            </li>
            <li
              class="pf-c-nav__item"
              data-ouia-component-id="OUIA-Generated-NavItem-6"
              data-ouia-component-type="PF4/NavItem"
              data-ouia-safe="true"
            >
              <a
                class="pf-c-nav__link"
                data-ouia-navigation-name="monitoring-nav"
                href="/Monitoring"
              >
                Monitoring
              </a>
            </li>
            <li
              class="pf-c-nav__item"
              data-ouia-component-id="OUIA-Generated-NavItem-7"
              data-ouia-component-type="PF4/NavItem"
              data-ouia-safe="true"
            >
              <a
                class="pf-c-nav__link"
                data-ouia-navigation-name="customDashboard-nav"
                href="/CustomDashboard"
              >
                Dashboards
              </a>
            </li>
          </ul>
        </nav>
      </div>
    </div>
    <main
      class="pf-c-page__main"
      data-ouia-main="true"
      id="main-content-page-layout-default-nav"
      tabindex="-1"
    >
      <section
        class="pf-c-page__main-section pf-m-light"
        data-ouia-component-type="page-not-found"
        data-ouia-safe="true"
      >
        <div
          class="pf-l-bullseye"
        >
          <div
            class="pf-c-empty-state"
          >
            <div
              class="pf-c-empty-state__content"
            >
              <svg
                aria-hidden="true"
                class="pf-c-empty-state__icon"
                fill="var(--pf-global--danger-color--100)"
                height="1em"
                role="img"
                style="vertical-align: -0.125em;"
                viewBox="0 0 512 512"
                width="1em"
              >
                <path
                  d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
                />
              </svg>
              <h1
                class="pf-c-title pf-m-4xl"
                data-ouia-component-id="OUIA-Generated-Title-2"
                data-ouia-component-type="PF4/Title"
                data-ouia-safe="true"
              >
                404 Error: page not found
              </h1>
              <div
                class="pf-c-empty-state__body"
              >
                This page could not be found.
              </div>
              <button
                aria-disabled="false"
                class="pf-c-button pf-m-primary"
                data-ouia-component-id="OUIA-Generated-Button-primary-2"
                data-ouia-component-type="PF4/Button"
                data-ouia-safe="true"
                data-testid="redirect-button"
                type="button"
              >
                Go to jobs management
              </button>
            </div>
          </div>
        </div>
      </section>
    </main>
  </div>
</div>
`;

exports[`RuntimeToolsDevUIEnvelopeView tests Snapshot::Process enabled, Trusty enabled, navitageTo empty 1`] = `<div />`;
